--- a/osa3/login-robot/report.html
+++ b/osa3/login-robot/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,61],[[4,5,6,0,[],[1,28,18],[],[[7,0,0,[],[1,40,2],[]],[8,0,0,[],[1,42,2],[]],[9,0,0,[],[1,44,1],[]]],[],[3,3,0,0]],[10,11,12,0,[],[1,46,14],[],[[13,0,0,[],[1,49,2],[]],[14,0,0,[],[1,51,2],[]],[15,0,0,[],[1,53,1],[]],[16,0,0,[],[1,54,3],[]],[17,0,0,[],[1,57,1],[]],[18,0,0,[],[1,59,1],[]]],[],[6,6,0,0]]],[],[],[9,9,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,105155],[[4,5,6,0,[],[0,33,105107],[],[[7,0,0,[],[0,50,97528,8],[]],[9,0,0,[],[1,97578,5037],[]],[10,0,0,[],[1,102615,2524],[]]],[],[3,2,1,0]],[11,12,13,0,[],[1,105140,14],[],[[14,0,0,[],[1,105143,2],[]],[15,0,0,[],[1,105145,2],[]],[16,0,0,[],[1,105147,2],[]],[17,0,0,[],[1,105149,1],[]],[18,0,0,[],[1,105150,2],[]],[19,0,0,[],[1,105152,2],[]]],[],[6,6,0,0]]],[],[],[9,8,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\HddBackup\\Yliopisto\\ohjelmistotuotanto\\injekt\\injekt\\osa3\\login-robot\\src\\tests","*src/tests","*Login","*C:\\HddBackup\\Yliopisto\\ohjelmistotuotanto\\injekt\\injekt\\osa3\\login-robot\\src\\tests\\login.robot","*src/tests/login.robot","*Login With Correct Credentials","*Login With Incorrect Password","*Login With Nonexistent Username","*Register","*C:\\HddBackup\\Yliopisto\\ohjelmistotuotanto\\injekt\\injekt\\osa3\\login-robot\\src\\tests\\register.robot","*src/tests/register.robot","*Register With Valid Username And Password","*Register With Already Taken Username And Valid Password","*Register With Too Short Username And Valid Password","*Register With Enough Long But Invalid Username And Valid Password","*Register With Valid Username And Too Short Password","*Register With Valid Username And Long Enough Password Containing Only Letters"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\HddBackup\\Yliopisto\\ohjelmistotuotanto\\injekt\\injekt\\osa3\\login-robot\\src\\tests","*src/tests","*Login","*C:\\HddBackup\\Yliopisto\\ohjelmistotuotanto\\injekt\\injekt\\osa3\\login-robot\\src\\tests\\login.robot","*src/tests/login.robot","*Login With Correct Credentials","*Output \"Logged in\" is not in ['']","*Login With Incorrect Password","*Login With Nonexistent Username","*Register","*C:\\HddBackup\\Yliopisto\\ohjelmistotuotanto\\injekt\\injekt\\osa3\\login-robot\\src\\tests\\register.robot","*src/tests/register.robot","*Register With Valid Username And Password","*Register With Already Taken Username And Valid Password","*Register With Too Short Username And Valid Password","*Register With Enough Long But Invalid Username And Valid Password","*Register With Valid Username And Too Short Password","*Register With Valid Username And Long Enough Password Containing Only Letters"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":9,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":9,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s1","label":"Tests.Login","name":"Login","pass":3,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s2","label":"Tests.Register","name":"Register","pass":6,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:45","fail":1,"label":"All Tests","pass":8,"skip":0}],[],[{"elapsed":"00:01:45","fail":1,"id":"s1","label":"Tests","name":"Tests","pass":8,"skip":0},{"elapsed":"00:01:45","fail":1,"id":"s1-s1","label":"Tests.Login","name":"Login","pass":2,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s2","label":"Tests.Register","name":"Register","pass":6,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1714757467613;
+window.output["baseMillis"] = 1714759391670;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 73;
+window.output["generated"] = 105167;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
